--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "start-openssl-legacy": "react-scripts --openssl-legacy-provider  start",
-    "build": "react-scripts --openssl-legacy-provider build",
-    "build-old": "react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
